--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "epkit",
-  "version": "1.0.0",
   "description": "A complete epub development kit",
-  "scripts": {
-    "dev": "npx gulp"
+  "version": "1.0.0-alpha",
+  "author": "Binyamin Aron Green @b3u",
+  "bin": {
+    "epkit": "bin/index.js"
   },
-  "bin": "script.js",
-  "files": [
-    "index.html",
-    "js/script.js",
-    "css/style.min.css",
-    "css/normalize.css"
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "IE 10"
   ],
-  "keywords": [],
-  "author": "Binyamin Aron Green",
-  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/b3u/epKit/issues"
+  },
   "dependencies": {
-    "epubjs": "^0.3.85",
-    "minimalist": "^1.0.0"
+    "adm-zip": "^0.4.13",
+    "archiver": "^3.1.1",
+    "browser-sync": "^2.26.7",
+    "commander": "^4.1.0",
+    "epubjs": "^0.3.85"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
-    "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
@@ -31,9 +32,21 @@
     "node-sass": "^4.13.1",
     "postcss-epub": "^3.0.1"
   },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "IE 10"
-  ]
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "homepage": "https://github.com/b3u/epKit#readme",
+  "keywords": [
+    "epub",
+    "ebook",
+    "idpf",
+    "cli"
+  ],
+  "license": "MIT",
+  "main": "lib/index.js",
+  "repository": "b3u/epKit",
+  "scripts": {
+    "postinstall": "node ./bin/postinstall.js",
+    "dev": "npx gulp"
+  }
 }
