--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "epkit",
   "description": "A complete epub development kit",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.1",
   "author": "Binyamin Aron Green @b3u",
   "bin": {
     "epkit": "bin/index.js"
